--- a/Helpers/Helpers/Jupiter.Helpers.csproj
+++ b/Helpers/Helpers/Jupiter.Helpers.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Dapper" Version="1.60.6" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.2.0" />
   </ItemGroup>
 
 </Project>
